frontend/tests/cases/positive/graded/box.gr
-- gr --no-eval

const : ∀ {a : Type, b : Type} . a → b [] → a
const x [y] = x
