frontend/tests/cases/negative/hsup/pushManyMany.gr
pushManyMany : forall {a b : Type} . (a, b) [Many] -> (a [Many], b [Many])
pushManyMany [(x, y)] = ([x], [y]) 